kustomizations/search/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  namespace: journal
spec:
  template:
    spec:
      containers:
      - name: search
        image: ghcr.io/elifesciences/search:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /search
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 10
          timeoutSeconds: 10
        volumeMounts:
        - name: config-volume
          mountPath: /app/config.php
          subPath: config.php
      volumes:
      - name: config-volume
        configMap:
          name: search-config
          items:
          - key: config.php
            path: config.php
