kustomizations/search/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
