kustomizations/search/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-web
spec:
  rules:
  - host: ${hostname}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: search-web
            port:
              number: 8984
